--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 0;
+  padding-top: 1rem;
+  padding-bottom: 0;
   text-align: center;
 }
 
